<resources>
    <string name="app_name">myQuiz</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start">Start</string>
    <string name="how_many_states_are_there_in_the_usa">How many states are there in the USA?</string>
    <string name="blue">Синій</string>
    <string name="_49">49</string>
    <string name="_50">50</string>
    <string name="_51">51</string>
    <string name="btn_continue">Continue</string>
    <string name="you_won">YOU WON!</string>
    <string name="try_again">Try Again</string>



    <string name="game_over">Game Over</string>

    <string name="position">Position</string>
    <string name="select_an_avatar">Select an Avatar</string>
    <string name="android_trivia">Android Trivia</string>
    <string name="about_text">Android Trivia will help remind you of important concepts you have learned and will learn in Android development.\n\nConsider modifying the questions and graphics to make this game your own!</string>
    <string name="rules_text">Select the answer from the options given. Each time you get an answer correct, you advance to the next question.\n\nIf you get the answer wrong, your game ends! You can return to the title screen using up or back from within the game screen, and this will also end your game.</string>
    <string name="rules">Rules</string>
    <string name="about">About</string>
    <string name="trivia_hint">Trivia Hint</string>
    <string name="title_android_trivia_question">myQuiz (%1$d/%2$d)</string>
    <string name="title_about_trivia">About Trivia</string>
    <string name="title_trivia_rules">Trivia Rules</string>
    <string name="share_success_text">I mastered #UdacityAndroidTrivia with %1$d/%2$d correct questions!</string>
    <string name="submit_button">Submit</string>
    <string name="congratulations">Congratulations!</string>
    <string name="share">Share</string>
    <string name="sharing_not_available">Sharing Not Available</string>

</resources>