<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Quiz">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#2D6ABC2F">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#8B428FCD"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView

                android:id="@+id/tv_toolBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/alata"
                android:text="Answer "
                android:textSize="22sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="22dp"
                />


        </androidx.appcompat.widget.Toolbar>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="293dp"
            android:layout_height="249dp"

            android:layout_marginTop="35dp"
            android:src="@drawable/android_category_simple"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar2" />

        <TextView
            android:id="@+id/tv_answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            android:layout_marginHorizontal="25dp"
            android:text="@string/how_many_states_are_there_in_the_usa"
            android:textSize="@dimen/text_size"
            app:layout_constraintBottom_toTopOf="@+id/rb_group"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        <RadioGroup
            android:id="@+id/rb_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="36dp"
            app:layout_constraintBottom_toTopOf="@+id/btn_answerSend"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_answer"
            app:layout_constraintVertical_bias="0.13">

            <RadioButton
                android:id="@+id/rb_0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/_49"
                android:textSize="@dimen/text_size" />

            <RadioButton
                android:id="@+id/rb_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_50"
                android:textSize="@dimen/text_size" />

            <RadioButton
                android:id="@+id/rb_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_51"
                android:textSize="@dimen/text_size" />

        </RadioGroup>

        <Button
            android:id="@+id/btn_answerSend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="100dp"
            android:text="@string/btn_continue"
            android:textSize="@dimen/text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rb_group" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>